style.css
@import url('https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap');

:root {
    --font-size-numbers: 32px;
    --font: "League Spartan", sans-serif;
  /* Theme 1 */

    /* backgournds */
    --T1-main-bg: hsl(222, 26%, 31%);
    --T1-toggle-keypad-bg: hsl(223, 31%, 20%);
    --T1-screen-bg: hsl(224, 36%, 15%);

    /* keys */
    --T1-digits-bg: hsl(0, 0%, 90%);
    --T1-digits-bg-hover: hsl(0, 0%, 100%);
    --T1-digits-shadow: hsl(28, 16%, 65%);
    --T1-digits-shadow-hover: hsl(28, 16%, 75%);

    --T1-res-del-bg: hsl(225, 21%, 49%);
    --T1-res-del-bg-hover: hsl(225, 21%, 59%);
    --T1-res-del-shadow: hsl(224, 28%, 35%);
    --T1-res-del-shadow-hover: hsl(224, 28%, 45%);

    --T1-equal-bg: hsl(6, 63%, 50%);
    --T1-equal-bg-hover: hsl(6, 63%, 60%);
    --T1-equal-shadow: hsl(6, 70%, 34%);
    --T1-equal-shadow-hover: hsl(6, 70%, 44%);

    /* text */
    --T1-text-navy: hsl(221, 14%, 31%);
    --T1-text-white: hsl(0, 100%, 100%);


  /* Theme 2 */

    /* backgournds */
    --T2-main-bg: hsl(0, 0%, 90%);
    --T2-toggle-keypad-bg:  hsl(0, 5%, 81%);
    --T2-screen-bg: hsl(0, 0%, 93%);

    /* keys */
    --T2-digits-bg: hsl(0, 0%, 90%);
    --T2-digits-shadow: hsl(35, 11%, 61%);

    --T2-res-del-bg: hsl(185, 42%, 37%);
    --T2-res-del-shadow: hsl(185, 58%, 25%);

    --T2-equal-bg: hsl(25, 98%, 40%);
    --T2-equal-shadow: hsl(25, 99%, 27%);

    /* text */
    --T2-text-gray: hsl(60, 10%, 19%);
    --T2-text-white: hsl(0, 100%, 100%);


  /* Theme 3 */

    /* backgournds */
      --T3-main-bg: hsl(268, 75%, 9%);
      --T3-toggle-keypad-bg:  hsl(268, 71%, 12%);
      --T3-screen-bg: hsl(268, 71%, 12%);

      /* keys */
      --T3-digits-bg: hsl(268, 47%, 21%);
      --T3-digits-shadow: hsl(290, 70%, 36%);

      --T3-res-del-bg: hsl(281, 89%, 26%);
      --T3-res-del-shadow: hsl(285, 91%, 52%);

      --T3-equal-bg: hsl(176, 100%, 44%);
      --T3-equal-shadow: hsl(177, 92%, 70%);

      /* text */
      --T3-text-yellow: hsl(52, 100%, 62%);
      --T3-text-blue: hsl(198, 20%, 13%);
      --T3-text-white: hsl(0, 100%, 100%);
}


/* Theme 1 styling*/

*{
  padding: 0;
  margin: 0;
  border: none;
  font-family: var(--font);
  font-size: var(--font-size-numbers);
  font-weight: 700;
}

body{
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--T1-main-bg);
  font-family: var(--font);
}

.calculator-container {
  width: 420px;
  height: 550px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

}

/* Theme 1 button section styling*/

.buttons-section {
  width: 90%;
  height: 400px;
  margin-top: 20px;
  background-color: var(--T1-toggle-keypad-bg);
  border-radius: 8px;
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  padding: 30px 20px;
  flex-shrink: 0;
}


.btn
 {
  width: 80px;
  height: 45px;
  border-radius: 8px;
  color: var(--T1-text-navy);
  background-color: var(--T1-digits-bg);
  box-shadow: 0px 2px 0px var(--T1-digits-shadow);
  padding-top: 6px;
  align-self: center;
  justify-self: center;
}

.btn:hover {
  background-color: var(--T1-digits-bg-hover);
  box-shadow: 0px 2px 0px var(--T1-digits-shadow-hover);
}




.resetBtn {
  grid-column-start: 1;
  grid-column-end: 3;
  min-width: 175px;
  width: 70px;
  height: 45px;
  align-self: center;
  justify-self: center;
  font-size: 20px;
  background-color: var(--T1-res-del-bg);
  box-shadow: 0px 2px 0px var(--T1-res-del-shadow);
  border-radius: 8px;
}

.resetBtn:hover,
.delBtn:hover {
  background-color: var(--T1-res-del-bg-hover);
  box-shadow: 0px 2px 0px var(--T1-res-del-shadow-hover);
}

.equalBtn {
  grid-column-start: 3;
  grid-column-end: 5;
  width: 70px;
  height: 45px;
  min-width: 175px;
  align-self: center;
  justify-self: center;
  font-size: 20px;
  border-radius: 8px;
  background-color: var(--T1-equal-bg);
  box-shadow: 0px 2px 0px var(--T1-equal-shadow);
}

.equalBtn:hover {
  background-color: var(--T1-equal-bg-hover);
  box-shadow: 0px 2px 0px var(--T1-equal-shadow-hover);
}

.delBtn {
  width: 80px;
  height: 45px;
  border-radius: 8px;
  align-self: center;
  justify-self: center;
  color: var(--T1-text-navy);
  background-color: var(--T1-res-del-bg);
  box-shadow: 0px 2px 0px var(--T1-res-del-shadow);
  padding-top: 6px;
}

button {
  cursor: pointer;;
}

.btn:active,
.resetBtn:active,
.delBtn:active,
.equalBtn:active {
  box-shadow: none;
  translate: 0px 2px;
}

/* Theme 1 display styling*/

.display-container {
  width: 100%;
  height: 100px;
  background-color: var(--T1-screen-bg);
  border-radius: 8px;
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: end;
  padding-top: 10px;
}

.display {
  color: var(--T1-text-white);
  font-size: 60px;
  margin-right: 20px;
  overflow: hidden;
}


/* Theme 1 header section styling*/

.header-section {
  width: 95%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  color: var(--T1-text-white);
}

.theme-switch-container {
  display: flex;
  align-items: center;
  gap: 20px;
}

.theme-switch-container p{
  font-size: 14px;
  font-weight: 400;
}

.theme-selector {
  display: flex;
  flex-direction: column;
  margin-bottom: 30px;
}

.labels-container label{
  font-size: 10px;
  margin-left: 5px;
  cursor: pointer;
}

.toggles-container input{
  width: 10px;
  display: none;
}

.toggles-container{
  width: 50px;
  height: 22px;
  border-radius: 10px;
  background-color: var(--T1-toggle-keypad-bg);
  
}

.toggle-circle {
  width: 18px;
  height: 18px;
  border-radius: 50%;
  background-color: var(--T1-equal-bg);
  position: absolute;
  justify-self: center;
  margin-top: 2px;
  cursor: pointer;
}

.toggle-circle:hover {
  background-color: var(--T1-equal-bg-hover);
}

